@@ -15,7 +15,7 @@ W=-Wall -Wextra \
 CFLAGS=-fPIC -O2 -I$(PYTHON27_HEADERS) -I$(XED_HEADERS) $(W) -ggdb
 LDFLAGS=-L$(PYTHON27_LIBS) -lpython2.7 -L$(XED_LIBS) -lxed -shared
 
-OBJS=check.o rflags.o operand.o instruction.o xed.o pyxed.o
+OBJS=check.o rflags.o operand.o instruction.o decoder.o pyxed.o
 BIN=pyxed.so
 
 CC=cc
