@@ -1,6 +1,6 @@
 # Python bindings for Intel's XED2
 
-huku &lt;[huku@grhack.net](@grhack.net)&gt;
+huku &lt;[huku@grhack.net](mailto:huku@grhack.net)&gt;
 
 <a href="https://pledgie.com/campaigns/27150"><img alt="" src="https://pledgie.com/campaigns/27150.png?skin_name=chrome" border="0" ></a>
 
