@@ -1,0 +1,4 @@
+2014-12-23 huku <huku@grhack.net>
+
+    * Add new class `pyxed.Encoder'.
+
