@@ -16,7 +16,7 @@ def main(argv):
         print '%s <hex>' % argv[0]
         return 1
 
-    xed = pyxed.XED()
+    xed = pyxed.Decoder()
     xed.set_mode(pyxed.XED_MACHINE_MODE_LEGACY_32, pyxed.XED_ADDRESS_WIDTH_32b)
     xed.itext = binascii.unhexlify(argv[1])
     xed.runtime_address = 0x10001000
